--- a/static/style.css
+++ b/static/style.css
@@ -13,14 +13,14 @@ html {
 
 }
 
-.color-scheme{
+/* .color-scheme{
 
 	position:absolute;
 	top:1.5rem;
 	right:2rem;
 	font-size: 80%;
 
-}
+} */
 
 body {
 
