--- a/static/style.css
+++ b/static/style.css
@@ -139,6 +139,27 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.stats {
+
+    dl {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto auto;
+    }
+
+    dt {
+        grid-row: 1; 
+        font-size: 0.85em;
+        color: #888;
+    }
+
+    dd {
+        grid-row: 2; 
+        color: #333; /* darker text color for dd elements */
+        font-size: 1.5em; /* larger font size for dd elements */
+    }
+
+}
 
 /* Old CSS we used for v1 of the contact form */
 @media DISABLED {
